# rag_medical

./: .env.example  .gitignore  FEATURE_DEMO_CHANGE_GPT_MODEL.md  FEATURE_DEMO_DISABLE_EMOTION.md  FEATURE_DEMO_EXPORT_CSV.md  FEATURE_DEMO_FRENCH_SUPPORT.md  FEATURE_DEMO_LIKE_DISLIKE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
indices/: index_store.json
src/: __init__.py  cli.py  main.py  test_emotion.py  test_topic.py
src/clients/: OpenAIClient.py  admin_client.py  auth_client.py  chat_client.py  history_client.py
src/config/: model_config.py
src/core_managers/: __init__.py  agent_manager.py  audio_manager.py  chat_history_manager.py  chat_manager.py  chat_store_manager.py  cnn_model_manager.py  config_manager.py  document_manager.py  encoding_manager.py  memory_manager.py  message_manager.py  prompt_manager.py  question_recomm_manager.py  redis_db_manager.py  response_manager.py  topic_clustering_manager.py  transformer_model_manager.py  vector_store_manager.py
src/database/: models.py  service_manager.py  session_manager.py
src/managers/: ChatBotManager.py  ConfigManager.py  EmbeddingManager.py  PromptManager.py  ResponseManager.py  VectorStoreManager.py
src/ml_models/: cnn.py  emotion_recognition_finetune.py  lstm.py  (+2 more)
tests/: playground.py  test_admin_client.py  test_agent_manager.py  test_audio_manager.py  test_chat_client.py  test_chat_integration.py  test_chatbot_service.py  test_directory_manager.py  test_document_manager.py  test_encoding_manager.py  test_helpers.py  test_prompt_manager.py  test_qestion_recomm_data_processor.py  test_question_generator.py  test_question_recommender.py  test_topic_clustering.py  test_topic_clustering_predict.py  test_topic_clustering_train.py  test_utils_helpers.py  test_vector_store_manager.py
(+82 files in other folders)
