[tool.poetry]
name = "rag_medical"
version = "0.1.0"
description = "Medical Question Answering System with Topic Clustering"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bertopic = "^0.15.0"
pandas = "^2.0.0"
hdbscan = "^0.8.33"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
sentence-transformers = "^2.2.2"
umap-learn = "^0.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
